Fix overlay issue with stuck labels

--- a/app/style/docs.less
+++ b/app/style/docs.less
@@ -158,6 +158,10 @@ ul.libraries {
   img.image {
     margin-left: 15px;
   }
+
+  .stuck {
+    pointer-events: none;
+  }
 }
 
 .syntaxhighlighter {
